--- a/Romanian/basic/0001.md
+++ b/Romanian/basic/0001.md
@@ -1,3 +1,46 @@
 # Costul schimbărilor climatice: 16 milioane de dolari pe oră
 
-0001 Costul schimbărilor climatice: 16 milioane de dolari pe oră
+Vremea extremă cauzată de schimbările climatice a costat lumea aproximativ 16 milioane de dolari pe oră în ultimii 20 de ani, a constatat un studiu.
+
+Cercetătorii din Noua Zeelandă au spus că schimbările climatice au provocat fenomene meteo extreme care au costat lumea aproximativ 143 de miliarde de dolari pe an din 2000 până în 2019.
+
+Cea mai mare parte a costului a fost din cauza unui număr estimat de 60.951 de decese suplimentare din cauza vremii extreme în cei 20 de ani pe care i-au studiat, au scris cercetătorii în Nature Communications.
+
+Ei și-au estimat costurile și numărul de decese studiind cum schimbările climatice au afectat 185 de evenimente meteo extreme și au folosit date globale privind costurile dezastrelor naturale.
+
+Cercetătorii au constatat că schimbările climatice au afectat 1,4 miliarde de oameni prin evenimente meteo extreme din 2000 până în 2019.
+
+Rezultatele lor arată că costul schimbărilor climatice ar putea fi mult mai mare decât estimările anterioare, au spus ei.
+
+Și nici măcar nu au inclus date din fiecare eveniment meteo extrem din întreaga lume, deoarece informațiile nu erau întotdeauna disponibile, a spus Ilan Noy, unul dintre cei doi cercetători, vorbind pentru The Guardian.
+
+De exemplu, aveau date doar despre decesele cauzate de valuri de căldură din Europa.
+
+"Nu avem idee câți oameni au murit din cauza valurilor de căldură în toată Africa subsahariană," a spus Noy.
+
+Organizația Națiunilor Unite spune că schimbările climatice au un impact din ce în ce mai mare în întreaga lume.
+
+În 2015, majoritatea țărilor au fost de acord să reducă emisiile de gaze cu efect de seră și să limiteze încălzirea globală la 1,5 grade Celsius peste nivelurile preindustriale.
+
+Dar în septembrie 2023, ONU a spus că lumea reduce emisiile prea încet.
+
+"Deși știm că acesta este doar începutul, răspunsul global este mult prea scăzut", a spus secretarul general al ONU, Antonio Guterres.
+
+
+# Întrebări
+Răspundeți la următoarele întrebări despre articol.
+
+1. Unde a fost publicat studiul?
+2. Câți oameni au fost afectați de evenimente meteo extreme între anii 2000 și 2019?
+3. Câți cercetători au fost implicați în studiu?
+4. Ce părere ai despre concluziile studiului?
+5. Te aștepți ca costul pe oră al încălzirii globale să continue să crească?
+6. Țara ta a avut multe evenimente meteo extreme în ultimii ani?
+7. Au fost schimbări notabile în modelele meteo din țara ta în ultimele decenii?
+8. Ce părți din țara ta vor fi cele mai afectate de schimbările climatice?
+
+9. În opinia ta, răspunsul guvernului tău la schimbările climatice este insuficient?
+10. Ce zone ale lumii crezi că vor fi cele mai afectate de schimbările climatice?
+11. Ai luat recent măsuri pentru a reduce impactul tău asupra mediului?
+12. Cunoști pe cineva care nu este preocupat de schimbările climatice?
+13. Trebuie să luptăm împotriva schimbărilor climatice ca și cum am vrea de fapt să câștigăm. — Jagmeet Singh. Ce părere ai despre această afirmație?
