--- a/Romanian/basic/0001.md
+++ b/Romanian/basic/0001.md
@@ -1,6 +1,8 @@
 # Costul schimbărilor climatice: 16 milioane de dolari pe oră
 
+<span class="hover-text" data-hover="Extreme weather caused by climate change has cost the world about $16 million per hour over the past 20 years, a study has found.">
 Vremea extremă cauzată de schimbările climatice a costat lumea aproximativ 16 milioane de dolari pe oră în ultimii 20 de ani, a constatat un studiu.
+</span>
 
 Cercetătorii din Noua Zeelandă au spus că schimbările climatice au provocat fenomene meteo extreme care au costat lumea aproximativ 143 de miliarde de dolari pe an din 2000 până în 2019.
 
