--- a/Romanian/basic/0001.md
+++ b/Romanian/basic/0001.md
@@ -46,3 +46,22 @@ Răspundeți la următoarele întrebări despre articol.
 11. Ai luat recent măsuri pentru a reduce impactul tău asupra mediului?
 12. Cunoști pe cineva care nu este preocupat de schimbările climatice?
 13. Trebuie să luptăm împotriva schimbărilor climatice ca și cum am vrea de fapt să câștigăm. — Jagmeet Singh. Ce părere ai despre această afirmație?
+
+
+<!-- Add this style in the head or inline -->
+<style>
+.hover-text {
+  cursor: pointer;
+}
+
+.hover-text:hover::after {
+  content: attr(data-hover);
+  position: absolute;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  padding: 4px;
+  color: #333;
+  font-size: 12px;
+}
+</style>
+
