--- a/Romanian/basic/0001.md
+++ b/Romanian/basic/0001.md
@@ -1,4 +1,25 @@
-# Costul schimbărilor climatice: 16 milioane de dolari pe oră
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    .hover-text {
+      cursor: pointer;
+    }
+
+    .hover-text:hover::after {
+      content: attr(data-hover);
+      position: absolute;
+      background-color: #f9f9f9;
+      border: 1px solid #ccc;
+      padding: 4px;
+      color: #333;
+      font-size: 12px;
+    }
+  </style>
+</head>
+<body>
+
+<h1>Costul schimbărilor climatice: 16 milioane de dolari pe oră</h1>
 
 <span class="hover-text" data-hover="Extreme weather caused by climate change has cost the world about $16 million per hour over the past 20 years, a study has found.">
 Vremea extremă cauzată de schimbările climatice a costat lumea aproximativ 16 milioane de dolari pe oră în ultimii 20 de ani, a constatat un studiu.
@@ -48,20 +69,6 @@ Răspundeți la următoarele întrebări despre articol.
 13. Trebuie să luptăm împotriva schimbărilor climatice ca și cum am vrea de fapt să câștigăm. — Jagmeet Singh. Ce părere ai despre această afirmație?
 
 
-<!-- Add this style in the head or inline -->
-<style>
-.hover-text {
-  cursor: pointer;
-}
 
-.hover-text:hover::after {
-  content: attr(data-hover);
-  position: absolute;
-  background-color: #f9f9f9;
-  border: 1px solid #ccc;
-  padding: 4px;
-  color: #333;
-  font-size: 12px;
-}
-</style>
-
+</body>
+</html>
