--- a/Romanian/basic/0001.md
+++ b/Romanian/basic/0001.md
@@ -1,27 +1,114 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    .hover-text {
-      cursor: pointer;
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  -webkit-animation-name: fadeIn; /* Fade in the background */
+  -webkit-animation-duration: 0.4s;
+  animation-name: fadeIn;
+  animation-duration: 0.4s
+}
+.modal-content {
+  position: fixed;
+  bottom: 0;
+  background-color: #fefefe;
+  width: 100%;
+  -webkit-animation-name: slideIn;
+  -webkit-animation-duration: 0.4s;
+  animation-name: slideIn;
+  animation-duration: 0.4s
+}
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal-header {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+.modal-body {padding: 2px 16px;}
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+@-webkit-keyframes slideIn {
+  from {bottom: -300px; opacity: 0} 
+  to {bottom: 0; opacity: 1}
+}
+@keyframes slideIn {
+  from {bottom: -300px; opacity: 0}
+  to {bottom: 0; opacity: 1}
+}
+@-webkit-keyframes fadeIn {
+  from {opacity: 0} 
+  to {opacity: 1}
+}
+@keyframes fadeIn {
+  from {opacity: 0} 
+  to {opacity: 1}
+}
+</style>
+<script>
+    var modal = document.getElementById("myModal");
+    var span = document.getElementsByClassName("close")[0];
+    function openModalWithContent(content) {
+      var modalBody = modal.getElementsByClassName("modal-body")[0];
+      modalBody.innerHTML = `<p>${content}</p>`;
+      modal.style.display = "block";
     }
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+</script>
 
-    .hover-text:hover::after {
-      content: attr(data-hover);
-      position: absolute;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      padding: 4px;
-      color: #333;
-      font-size: 12px;
-    }
-  </style>
 </head>
 <body>
 
+  <div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <h2>Modal Header</h2>
+      </div>
+      <div class="modal-body">
+        <!-- Content will be inserted here -->
+      </div>
+      <div class="modal-footer">
+        <h3>Modal Footer</h3>
+      </div>
+    </div>
+  </div>
+
 <h1>Costul schimbărilor climatice: 16 milioane de dolari pe oră</h1>
 
-<span class="hover-text" data-hover="Extreme weather caused by climate change has cost the world about $16 million per hour over the past 20 years, a study has found.">
+<span onclick="openModalWithContent('Content for first modal')">
 Vremea extremă cauzată de schimbările climatice a costat lumea aproximativ 16 milioane de dolari pe oră în ultimii 20 de ani, a constatat un studiu.
 </span>
 
