react native introduction -1

--- a/reactNative/rn/001.md
+++ b/reactNative/rn/001.md
@@ -24,27 +24,61 @@ Here are the **key areas** you need to master to become a React Native developer
 
 - **TypeScript basics**: interfaces vs types, generics, type narrowing, module augmentation
 
-**2\. Core React Concepts**
+2.  **Core React Concepts**
 
--  **JSX & reconciliation**: Virtual DOM diffing, keys
+- JSX & reconciliation: Virtual DOM diffing, keys
 
--  **Components**: functional vs class
+- Components: functional vs class, Fragments
 
--  **Data flow**: props, state, unidirectional updates
+- Data flow: props, state, unidirectional updates
 
--  **Lifecycle / effects**: componentDidMount etc. or useEffect
+- Hooks: useState, useEffect, useCallback, useMemo, custom hooks
 
--  **Hooks**: useState, useEffect, useCallback, useMemo, custom hooks
+- Context API: createContext / Providers / useContext
 
-**3\. React Native Essentials**
+- Refs: useRef, ref forwarding
 
--  **Built-in UI**: View, Text, Image, ScrollView, FlatList/SectionList
+- Error boundaries: componentDidCatch / getDerivedStateFromError
 
--  **Styling**: Flexbox, StyleSheet, units (DP vs %), SafeAreaView
+- Render patterns: render props, higher-order components, component composition
 
--  **Device metrics**: Dimensions, PixelRatio
+- Suspense & lazy loading: React.lazy / <Suspense>
 
--  **Platform quirks**: iOS vs Android styling, keyboard handling, permissions
+- Event handling: React's synthetic events, cross-platform quirks
+
+- Performance: React.memo, useTransition (Concurrent React intro)
+
+- DevTools & Profiler: hook inspection, flamegraphs
+
+- Type checking: PropTypes or TypeScript interfaces/types
+
+3.  **React Native Essentials**
+
+- Built-in UI: View, Text, Image, ScrollView, FlatList / SectionList
+
+- Styling: Flexbox, StyleSheet API, units (DP vs %), SafeAreaView
+
+- Device metrics: Dimensions, PixelRatio, useWindowDimensions
+
+- Platform quirks: iOS vs Android styling, KeyboardAvoidingView / keyboard handling, Permissions
+
+- Touch & gestures: Pressable / TouchableOpacity, PanResponder, React Native Gesture Handler
+
+- Animations: Animated API, LayoutAnimation, Reanimated basics
+
+- Navigation hooks: useNavigation, useRoute (ties back to React Navigation)
+
+- StatusBar & Appearance: StatusBar API, Appearance (dark mode)
+
+- App lifecycle & state: AppState, NetInfo (connectivity)
+
+- Storage & persistence: AsyncStorage / MMKV, SecureStore
+
+- Linking & deep linking: Linking API, universal links / app links
+
+- Accessibility: accessible props, accessibilityLabel, roles, focus management
+
+- Native modules basics: Platform module, PermissionsAndroid, interaction with native APIs
 
 **4\. Navigation**
 
@@ -56,11 +90,13 @@ Here are the **key areas** you need to master to become a React Native developer
 
 **5\. State Management**
 
--  **Local**: Context API, useReducer
+-  **Local**: Context API, useReducer, state normalization & selectors (Reselect / RTK's createSelector)
 
--  **Global**: Redux (actions, reducers, middleware), MobX, Recoil
+-  **Global**: Redux (actions, reducers, middleware, RTK "slices"), MobX, Recoil, lightweight alternatives (Zustand, Jotai)
 
--  **Async data**: Redux-Thunk / Redux-Saga / React Query / SWR
+-  **Persistence**: Redux Persist, MMKV, AsyncStorage integrations
+
+-  **Async data**: Redux-Thunk / Redux-Saga, React Query / SWR, GraphQL clients (Apollo Client, Urql)
 
 **6\. Native Modules & Bridging**
 
@@ -77,6 +113,14 @@ Here are the **key areas** you need to master to become a React Native developer
 -  **Caching & storage**: AsyncStorage, MMKV, SQLite
 
 -  **Offline sync** patterns
+
+-  **Connectivity & status**: @react-native-community/netinfo, reachability checks, offline/online event handling
+
+-  **Background tasks**: BackgroundFetch, react-native-background-task, WorkManager (Android)
+
+-  **Retry & queueing**: exponential backoff, offline mutation queue (e.g. Redux Offline, Apollo Offline)
+
+-  **Security**: HTTPS pinning, certificate handling, secure storage for tokens (Keychain, Keystore)
 
 **8\. Animations & Gestures**
 
@@ -161,5 +205,33 @@ Here are the **key areas** you need to master to become a React Native developer
 -  **Accessibility (a11y)**: labels, roles, focus management
 
 -  **Security**: secure storage, encrypted data, avoiding eval
+
+**18\. CI/CD, Analytics & Architecture Extras**
+
+-  **CI/CD & DevOps:** GitHub Actions / Bitrise for automated builds/tests, Fastlane for signing & release
+
+-  **Analytics & Monitoring:** Segment / Amplitude / Firebase Analytics, performance monitoring (New Relic, Datadog)
+
+-  **Internationalization (i18n):** react-native-i18n, FormatJS / Intl usage
+
+-  **Feature Flags & Remote Config:** LaunchDarkly, Firebase Remote Config
+
+-  **Monorepos & Code Sharing:** Yarn Workspaces, Lerna, NX (for sharing web & native code)
+
+**19\. React Native Architecture Evolution**
+
+-  **Classic Bridge (Pre-0.60):** JavaScriptCore + Bridge, synchronous serialization, manual native modules
+
+-  **New Architecture (Fabric & TurboModules):**
+
+-  **Fabric Renderer:** concurrent UI, async layout, fine-grained updates
+
+-  **TurboModules:** codegen'd native modules, direct JS ↔ Native calls
+
+-  **JSI & Hermes:** JavaScript Interface for direct native access, optimized bytecode execution
+
+-  **Codegen:** automated type-safe bindings for props, events, modules
+
+-  **Community Engines & Runtimes:** Hermes (default), JSC (legacy), V8 Mobile (optional)
 
 Focusing your study on each of these areas---and having a small demo app or code snippets ready to discuss---will put you in great shape to become a React Native developer. Good luck!
