react native introduction -1

--- a/reactNative/rn/001.md
+++ b/reactNative/rn/001.md
@@ -1,3 +1,8 @@
+
+## Course 1: Introduction
+
+In this lesson, you’ll learn the essential topics to master in order to call yourself a React Native developer.
+
 Here are the **key areas** you need to master to become a React Native developer:
 
 1.  **JavaScript, ESNext & TypeScript Fundamentals**
