react native introduction -1

--- a/reactNative/rn/001.md
+++ b/reactNative/rn/001.md
@@ -5,85 +5,97 @@ In this lesson, you’ll learn the essential topics to master in order to call y
 
 Here are the **key areas** you need to master to become a React Native developer:
 
-1.  **JavaScript, ESNext & TypeScript Fundamentals**
+**Prerequisites & Setup**
 
-- Core mechanics: closures, hoisting, this, arrow functions
+-  **Node.js (LTS)** & **Yarn** or **npm**
 
-- Async patterns: Promises / async--await, error propagation
+-  **Visual Studio Code** (with ESLint, Prettier, React Native Tools)
 
-- Syntax sugar: destructuring, rest/spread, template literals
+-  **Xcode** & **CocoaPods** (macOS, iOS builds)
 
-- Modules & tooling: ESM imports/exports, bundlers (Metro, Webpack)
+-  **Android Studio** & **Android SDK**
 
-- Event loop & concurrency: micro- vs macro-tasks, blocking the JS/UI thread
+-  **React Native CLI** (npx react-native) environment
 
-- Prototypal inheritance & classes: prototype chain, ES6 class vs manual prototypes
+**1\. JavaScript, ESNext & TypeScript Fundamentals**
 
-- Optional chaining & nullish coalescing: ?. and ??
+-  **Core mechanics**: closures, hoisting, this, arrow functions
 
-- Dynamic imports & code splitting: import(), lazy-loading modules
+-  **Async patterns**: Promises / async--await, error propagation
 
-- Timers & scheduling: setTimeout/setInterval/requestAnimationFrame, cleanup to avoid leaks
+-  **Syntax sugar**: destructuring, rest/spread, template literals
 
-- Error handling patterns: centralized error boundaries, global handlers (ErrorUtils)
+-  **Modules & tooling**: ESM imports/exports, bundlers (Metro, Webpack)
 
-- **TypeScript basics**: interfaces vs types, generics, type narrowing, module augmentation
+-  **Event loop & concurrency**: micro- vs macro-tasks, blocking the JS/UI thread
 
-2.  **Core React Concepts**
+-  **Prototypal inheritance & classes**: prototype chain, ES6 class vs manual prototypes
 
-- JSX & reconciliation: Virtual DOM diffing, keys
+-  **Optional chaining & nullish coalescing**: ?. and ??
 
-- Components: functional vs class, Fragments
+-  **Dynamic imports & code splitting**: import(), lazy-loading modules
 
-- Data flow: props, state, unidirectional updates
+-  **Timers & scheduling**: setTimeout/setInterval/requestAnimationFrame, cleanup to avoid leaks
 
-- Hooks: useState, useEffect, useCallback, useMemo, custom hooks
+-  **Error handling patterns**: centralized error boundaries, global handlers (ErrorUtils)
 
-- Context API: createContext / Providers / useContext
+-  **TypeScript basics**: interfaces vs types, generics, type narrowing, module augmentation
 
-- Refs: useRef, ref forwarding
+**2\. Core React Concepts**
 
-- Error boundaries: componentDidCatch / getDerivedStateFromError
+-  **JSX & reconciliation**: Virtual DOM diffing, keys
 
-- Render patterns: render props, higher-order components, component composition
+-  **Components**: functional vs class, Fragments
 
-- Suspense & lazy loading: React.lazy / <Suspense>
+-  **Data flow**: props, state, unidirectional updates
 
-- Event handling: React's synthetic events, cross-platform quirks
+-  **Hooks**: useState, useEffect, useCallback, useMemo, custom hooks
 
-- Performance: React.memo, useTransition (Concurrent React intro)
+-  **Context API**: createContext / Providers / useContext
 
-- DevTools & Profiler: hook inspection, flamegraphs
+-  **Refs**: useRef, ref forwarding
 
-- Type checking: PropTypes or TypeScript interfaces/types
+-  **Error boundaries**: componentDidCatch / getDerivedStateFromError
 
-3.  **React Native Essentials**
+-  **Render patterns**: render props, higher-order components, composition
 
-- Built-in UI: View, Text, Image, ScrollView, FlatList / SectionList
+-  **Suspense & lazy loading**: React.lazy / <Suspense>
 
-- Styling: Flexbox, StyleSheet API, units (DP vs %), SafeAreaView
+-  **Event handling**: React's synthetic events, cross-platform quirks
 
-- Device metrics: Dimensions, PixelRatio, useWindowDimensions
+-  **Performance**: React.memo, useTransition (Concurrent React intro)
 
-- Platform quirks: iOS vs Android styling, KeyboardAvoidingView / keyboard handling, Permissions
+-  **DevTools & Profiler**: hook inspection, flamegraphs
 
-- Touch & gestures: Pressable / TouchableOpacity, PanResponder, React Native Gesture Handler
+-  **Type checking**: PropTypes or TypeScript interfaces/types
 
-- Animations: Animated API, LayoutAnimation, Reanimated basics
+**3\. React Native Essentials**
 
-- Navigation hooks: useNavigation, useRoute (ties back to React Navigation)
+-  **Built-in UI**: View, Text, Image, ScrollView, FlatList / SectionList
 
-- StatusBar & Appearance: StatusBar API, Appearance (dark mode)
+-  **Styling**: Flexbox, StyleSheet API, units (DP vs %), SafeAreaView
 
-- App lifecycle & state: AppState, NetInfo (connectivity)
+-  **Device metrics**: Dimensions, PixelRatio, useWindowDimensions
 
-- Storage & persistence: AsyncStorage / MMKV, SecureStore
+-  **Platform quirks**: iOS vs Android styling, KeyboardAvoidingView, Permissions
 
-- Linking & deep linking: Linking API, universal links / app links
+-  **Touch & gestures**: Pressable / TouchableOpacity, PanResponder, React Native Gesture Handler
 
-- Accessibility: accessible props, accessibilityLabel, roles, focus management
+-  **Animations**: Animated API, LayoutAnimation, Reanimated basics
 
-- Native modules basics: Platform module, PermissionsAndroid, interaction with native APIs
+-  **Navigation hooks**: useNavigation, useRoute (with React Navigation)
+
+-  **StatusBar & Appearance**: StatusBar API, Appearance (dark mode)
+
+-  **App lifecycle & state**: AppState, NetInfo (connectivity)
+
+-  **Storage & persistence**: AsyncStorage / MMKV, SecureStore
+
+-  **Linking & deep linking**: Linking API, universal/app links
+
+-  **Accessibility**: accessible props, accessibilityLabel, roles, focus management
+
+-  **Native modules basics**: Platform module, PermissionsAndroid, bridging APIs
 
 **4\. Navigation**
 
