react native introduction -1

--- a/reactNative/rn/002.md
+++ b/reactNative/rn/002.md
@@ -1,100 +1,52 @@
 ## React Native plus TypeScript Project Setup Guide
 
-Below is a step by step guide to bootstrap a new React Native plus TypeScript project using both bare workflow and Expo workflow along with key differences
+## React Native plus TypeScript Project Setup Guide
 
-## Prerequisites and Setup
+**Prerequisites and Setup**
+- Install Node js LTS using your package manager eg brew install node or via nvm install lts  
+- Install Yarn via **npm install -g yarn** or use npm  
+- Install Visual Studio Code and add ESLint Prettier React Native Tools extensions  
+- On macOS install Xcode from the App Store and install CocoaPods using **sudo gem install cocoapods**  
+- Install Android Studio and Android SDK, set ANDROID_HOME and update PATH in your shell profile  
+- Ensure React Native CLI is available via **npx react-native --version**  
 
-- Install Node js LTS and Yarn or npm  
-- Install Visual Studio Code with ESLint Prettier React Native Tools extensions  
-- On macOS install Xcode and CocoaPods via sudo gem install cocoapods  
-- Install Android Studio and Android SDK and configure ANDROID_HOME and PATH  
-- Use React Native CLI via npx react-native
+**Bare React Native plus TypeScript no Expo**
+- Create new project with **npx react-native init MyApp --template react-native-template-typescript**  
+- Change into project folder using **cd MyApp**  
+- Install dependencies with **yarn** or **npm install**  
+- For iOS navigate to ios then run **pod install** to install native pods  
+- Open ios/MyApp.xcworkspace in Xcode to configure bundle identifier and signing team  
+- Ensure ANDROID_HOME is set then run **npx react-native run-android** to build on Android  
+- Run **npx react-native run-ios** to launch on iOS simulator  
+- Add ESLint Prettier configs: install **eslint**, **prettier**, **eslint-config-airbnb**, **@typescript-eslint/parser** and plugins then create .eslintrc and .prettierrc  
+- Rename all JS files that use JSX to .tsx and others to .ts, add tsconfig.json with strict true and jsx react-native  
+- Create index.tsx exporting App from App.tsx and ensure entry point in package.json is index.tsx  
 
-## Bare React Native plus TypeScript (no Expo)
+**Expo plus TypeScript**
+- Install Expo CLI globally with **npm install -g expo-cli**  
+- Initialize project with **npx expo init MyExpoApp** and select blank TypeScript template  
+- Change into MyExpoApp and install dependencies with **yarn** or **npm install**  
+- Run **expo start** to launch Metro and open developer tools; press **i** for iOS simulator or **a** for Android  
+- To add a native library use **expo install <packageName>** or run **expo prebuild** then cd ios && **pod install**  
+- For production builds configure EAS with **eas login** then **eas build --platform ios** or **eas build --platform android**  
 
-1. Create the project  
-   npx react-native init MyApp --template react-native-template-typescript  
-   cd MyApp
+**Expo versus Bare Workflow Key Differences**
+- Expo managed workflow requires no Xcode or Android Studio for development but limited to supported unimodules  
+- Bare workflow requires native toolchain but allows full custom native code  
+- Expo includes OTA updates out of the box via **expo-updates**, Bare uses CodePush or custom solution  
+- Expo projects ship with its runtime increasing binary size, Bare apps can prune unused modules  
 
-2. iOS support on macOS  
-   cd ios  
-   pod install  
-   cd ..
+**Environment and Tooling Tips**
+- Use **nvm** to switch Node versions per project  
+- Add editorconfig file and share ESLint Prettier settings across team  
+- Enable Flipper in Debug schemes in Xcode and in Android debug Gradle for native module inspection  
+- Configure Metro in metro.config.js to support monorepos or custom asset resolution  
+- Use Husky and lint-staged to run lint precommit using **lint-staged** and **husky install**  
 
-3. Android support  
-   Ensure ANDROID_HOME and PATH point to your SDK  
-   Open the android folder in Android Studio if needed
-
-4. Run on simulator or device  
-   npx react-native run-ios  
-   npx react-native run-android
-
-5. Editor and linting  
-   Review generated tsconfig json  
-   Add ESLint and Prettier config for ts and tsx files
-
-6. TypeScript usage  
-   Rename JS files to TS or TSX  
-   Define component props with interface or type  
-   Example interface Props title string  
-   const MyComponent React.FC Props equals destructuring title arrow body
-
-## Expo plus TypeScript
-
-1. Install Expo CLI  
-   npm install -g expo-cli
-
-2. Initialize project  
-   npx expo init MyExpoApp  
-   Choose the blank TypeScript template
-
-3. Run the app  
-   cd MyExpoApp  
-   expo start  
-   Scan QR code in Expo Go or press i or a to launch simulators
-
-## Expo versus Bare Workflow Key Differences
-
-- Setup speed  
-  Expo launches nearly instantly with no native toolchain  
-  Bare requires Xcode and Android Studio installations
-
-- Native modules  
-  Expo supports built in modules until you eject  
-  Bare allows adding any native library via CocoaPods or Gradle
-
-- Over the air updates  
-  Expo uses built in Updates  
-  Bare uses CodePush or custom solution
-
-- Build pipelines  
-  Expo offers EAS Build or cloud builds  
-  Bare requires manual Xcode schemes and Gradle tasks
-
-- Binary size  
-  Expo runtime makes apps larger  
-  Bare yields leaner binaries with only included modules
-
-- Customization  
-  Expo is limited until eject  
-  Bare gives full control over native projects and signing
-
-## Next Steps
-
-- Tooling and CI CD  
-  Add ESLint Prettier and Husky for pre commit hooks  
-  Configure TypeScript path aliases  
-  Set up GitHub Actions or Bitrise for automated builds and tests
-
-- Navigation  
-  Install and configure React Navigation or Wix React Native Navigation with TypeScript
-
-- State Management  
-  Choose Context plus useReducer Redux Toolkit MobX Recoil or similar
-
-- Native APIs and Modules  
-  Integrate camera notifications geolocation via community packages or custom modules
-
-- Deployment  
-  Use Fastlane for automated signing and release  
-  Consider CodePush for bare or Updates for managed Expo apps
+**Further Steps**
+- Install React Navigation with **yarn add @react-navigation/native** and supporting stack/tabs/drawer packages  
+- Add Redux Toolkit with **yarn add @reduxjs/toolkit react-redux** and configure slices in TypeScript  
+- Set up CI/CD with GitHub Actions or Bitrise for automated builds using **fastlane init** for signing and release  
+- Write unit tests with **yarn add --dev jest @testing-library/react-native** and configure Jest in package.json  
+- Integrate Sentry with **yarn add @sentry/react-native** and init in App.tsx for crash reporting  
+- Add internationalization with **yarn add react-native-i18n js** and configure locale files using Intl or formatjs  
