react native introduction -1

--- a/reactNative/rn/002.md
+++ b/reactNative/rn/002.md
@@ -1,7 +1,5 @@
 ## React Native plus TypeScript Project Setup Guide
 
-## React Native plus TypeScript Project Setup Guide
-
 **Prerequisites and Setup**
 - Install Node js LTS using your package manager eg brew install node or via nvm install lts  
 - Install Yarn via **npm install -g yarn** or use npm  
@@ -11,14 +9,27 @@
 - Ensure React Native CLI is available via **npx react-native --version**  
 
 **Bare React Native plus TypeScript no Expo**
-- Create new project with **npx react-native init MyApp --template react-native-template-typescript**  
+- Create new project with  
+  
+  **npx react-native init MyApp --template react-native-template-typescript**  
+  
+  You may see deprecation warnings and prompts like:  
+  npm warn deprecated inflight@1.0.6  
+  npm warn deprecated rimraf@3.0.2  
+  npm warn deprecated glob@7.2.3  
+  
+  and an advisory  
+  🚨️ The init command is deprecated  
+  - Switch to **npx @react-native-community/cli init** for identical behavior  
+  - Refer to official docs at reactnative.dev/docs/getting-started  
+  
 - Change into project folder using **cd MyApp**  
 - Install dependencies with **yarn** or **npm install**  
 - For iOS navigate to ios then run **pod install** to install native pods  
 - Open ios/MyApp.xcworkspace in Xcode to configure bundle identifier and signing team  
 - Ensure ANDROID_HOME is set then run **npx react-native run-android** to build on Android  
 - Run **npx react-native run-ios** to launch on iOS simulator  
-- Add ESLint Prettier configs: install **eslint**, **prettier**, **eslint-config-airbnb**, **@typescript-eslint/parser** and plugins then create .eslintrc and .prettierrc  
+- Add ESLint Prettier configs: install eslint prettier eslint-config-airbnb @typescript-eslint/parser and plugins then create .eslintrc and .prettierrc  
 - Rename all JS files that use JSX to .tsx and others to .ts, add tsconfig.json with strict true and jsx react-native  
 - Create index.tsx exporting App from App.tsx and ensure entry point in package.json is index.tsx  
 
@@ -33,20 +44,12 @@
 **Expo versus Bare Workflow Key Differences**
 - Expo managed workflow requires no Xcode or Android Studio for development but limited to supported unimodules  
 - Bare workflow requires native toolchain but allows full custom native code  
-- Expo includes OTA updates out of the box via **expo-updates**, Bare uses CodePush or custom solution  
+- Expo includes OTA updates out of the box via expo-updates, Bare uses CodePush or custom solution  
 - Expo projects ship with its runtime increasing binary size, Bare apps can prune unused modules  
 
 **Environment and Tooling Tips**
-- Use **nvm** to switch Node versions per project  
+- Use nvm to switch Node versions per project  
 - Add editorconfig file and share ESLint Prettier settings across team  
 - Enable Flipper in Debug schemes in Xcode and in Android debug Gradle for native module inspection  
 - Configure Metro in metro.config.js to support monorepos or custom asset resolution  
-- Use Husky and lint-staged to run lint precommit using **lint-staged** and **husky install**  
-
-**Further Steps**
-- Install React Navigation with **yarn add @react-navigation/native** and supporting stack/tabs/drawer packages  
-- Add Redux Toolkit with **yarn add @reduxjs/toolkit react-redux** and configure slices in TypeScript  
-- Set up CI/CD with GitHub Actions or Bitrise for automated builds using **fastlane init** for signing and release  
-- Write unit tests with **yarn add --dev jest @testing-library/react-native** and configure Jest in package.json  
-- Integrate Sentry with **yarn add @sentry/react-native** and init in App.tsx for crash reporting  
-- Add internationalization with **yarn add react-native-i18n js** and configure locale files using Intl or formatjs  
+- Use Husky and lint-staged to run lint precommit using lint-staged and husky install 
