react native introduction -1

--- a/reactNative/rn/002.md
+++ b/reactNative/rn/002.md
@@ -22,6 +22,7 @@
   🚨️ The init command is deprecated  
   - Switch to **npx @react-native-community/cli init** for identical behavior  
   - Refer to official docs at reactnative.dev/docs/getting-started  
+  🚨️ **--template react-native-template-typescript** flag — but starting from React Native v0.71, TypeScript is included by default, so the CLI no longer expects or supports this template.
   
 - Change into project folder using **cd MyApp**  
 - Install dependencies with **yarn** or **npm install**  
