--- a/reactNative/rn/004.md
+++ b/reactNative/rn/004.md
@@ -1,4 +1,4 @@
-## 1.1 JavaScript, ESNext & TypeScript Fundamentals in React Native : Closures
+## 1.2 JavaScript, ESNext & TypeScript Fundamentals in React Native : Hoisting
 
 # Hoisting in React Native TypeScript
 
