article for react native

--- a/reactNative/rn/018.md
+++ b/reactNative/rn/018.md
@@ -122,6 +122,26 @@ function Child(props ChildProps) {
 }
 ```
 
+### 📦 Why is this important?
+
+In React:
+
+-   Functions are re-created **every time a component re-renders**.
+
+-   If you're passing those functions to child components (especially `memoized`  ones), the **child will re-render too**, even if the function logic is identical.
+
+-   This can cause **unnecessary performance overhead**.
+
+* * * * *
+
+### ✅ `useCallback`  prevents this by:
+
+-   **Memoizing**  the function.
+
+-   Keeping the **same function reference**  between renders, as long as dependencies don't change.
+
+-   Helping prevent **unwanted re-renders in children**.
+
 ### useMemo
 
 Memoizes expensive computed values only recalculates when deps change
@@ -150,6 +170,47 @@ function Fibonacci() {
   )
 }
 ```
+
+🔄 `useMemo`  vs `useCallback`
+------------------------------
+
+| Feature | `useMemo` | `useCallback` |
+| --- | --- | --- |
+| What it memoizes | **Return value**  of a function | **Function itself** |
+| Use case | Heavy calculations, derived values | Passing stable functions to children |
+| Return type | Any computed value | A memoized function |
+| Prevents | **Recalculation**  of values | **Recreation**  of function objects |
+
+* * * * *
+
+### 🧠 Analogy
+
+-   `useMemo` = "Memoize the **result**  of a function."
+
+-   `useCallback` = "Memoize the **function itself**."
+
+* * * * *
+
+🧪 When to Use Each
+-------------------
+
+### Use `useMemo`  when:
+
+-   You perform **heavy computation** (e.g., Fibonacci, sorting).
+
+-   You derive **filtered or transformed data**  from props or state.
+
+### Use `useCallback`  when:
+
+-   You pass **functions to children**  or `React.memo`  components.
+
+-   You want to **prevent re-renders**  caused by changed function references.
+
+* * * * *
+
+### 🔚 Final Tip
+
+Don't use `useMemo`  or `useCallback`  **everywhere** --- only where **performance impact exists**. Overusing them can actually **slow down**  your app due to caching overhead.
 
 ### Custom hooks
 
