article for react native

--- a/reactNative/rn/002.md
+++ b/reactNative/rn/002.md
@@ -42,6 +42,38 @@
 - To add a native library use **expo install <packageName>** or run **expo prebuild** then cd ios && **pod install**  
 - For production builds configure EAS with **eas login** then **eas build --platform ios** or **eas build --platform android**  
 
+### ⚠️ Why not use `expo-cli`  globally?
+
+-   It's **deprecated**
+
+-   **Incompatible**  with newer Node versions (>= 17)
+
+-   You'll get errors or outdated behavior
+
+* * * * *
+
+### 🧰 1\. **Initialize a new Expo TypeScript project**
+
+```\javascript
+npx create-expo-app MyExpoApp -t expo-template-blank-typescript\
+cd MyExpoApp\
+```
+
+This will:
+
+-   Set up a blank Expo app with TypeScript (`tsconfig.json`, `.tsx`  entry file, etc.)
+
+-   Use the **new local Expo CLI** (inside the project)
+
+### ✅ Summary
+
+| Task | Old (`expo-cli`) | New (✅ Recommended) |
+| --- | --- | --- |
+| Init project | `expo init` | `npx create-expo-app` |
+| Run dev server | `expo start` | `npx expo start` |
+| Install pkg | `expo install ...` | `npx expo install ...` |
+| Build | `expo build` (legacy) | `npx eas build` |
+
 **Expo versus Bare Workflow Key Differences**
 - Expo managed workflow requires no Xcode or Android Studio for development but limited to supported unimodules  
 - Bare workflow requires native toolchain but allows full custom native code  
